@@ -1,3 +1,6 @@
+2010-05-14  Roland Clobus <rclobus@rclobus.nl>
+	* client/gtk/connect.c: Fix capitalization again.
+
 2010-05-13  Roland Clobus <rclobus@rclobus.nl>
 	* client/gtk/connect.c: Add ordering to connect dialog.
 	* server/pregame.c: Fix compiler warning.
